--- a/src/main/webapp/WEB-INF/views/th/homepage/home.html
+++ b/src/main/webapp/WEB-INF/views/th/homepage/home.html
@@ -7,6 +7,9 @@
 <body>
 	<div align="center">
 		<h2>List of Users</h2>
+		<form th:action="@{/logout}" action="#" method="POST">
+			<input type="submit" value="Logout" />
+		</form>
 		<table border="1">
 			<tr>
 				<th>Seq</th>
