Configure database authentication

--- a/src/main/webapp/WEB-INF/views/th/fragments/userRegistration.html
+++ b/src/main/webapp/WEB-INF/views/th/fragments/userRegistration.html
@@ -31,6 +31,15 @@
 			<td><input type="text" th:value="*{departmentName}"
 				name="departmentName" /></td>
 		</tr>
+		<tr>
+			<td>Roles</td>
+			<td>
+				<span th:each="role : ${roles}">
+					<input type="checkbox" th:value="${role.roleId}" name="roles"/>
+					<label th:text="${role.roleName}">Admin</label>
+				</span>				
+			</td>
+		</tr>
 	</table>
 </body>
 </html>
