--- a/src/main/webapp/WEB-INF/views/th/signin.html
+++ b/src/main/webapp/WEB-INF/views/th/signin.html
@@ -24,7 +24,8 @@
 					<td><input type="password" name="password" placeholder="password"/></td>
 				</tr>
 				<tr>
-					<td colspan="2"><input type="submit" name="btnSubmit" value="Login"/></td>
+					<td><input type="checkbox" name="rememberMe" />Remember me</td>
+					<td align="right"><input type="submit" name="btnSubmit" value="Login"/></td>
 				</tr>
 			</table>
 		</div>
